# fastapi_study

./: README.md  main.py  pyproject.toml
script/chapter2/: models.py  myapi.db
script/chapter2/migrations/versions/: e98b43dce762_.py
script/fastapi_tutorial/: main.py
script/fastapi_tutorial/tutorial/: 01_first_steps.py  02_path_parameters.py  03_query_parameters.py  04_request_body.py  05_query_parameters_and_string_validations.py  06_path_parameters_and_numeric_validations.py  07_query_parameter_models.py  08_body_multiple_parameters.py  09_body_fields.py  10_body_nested_models.py  11_declare_request_example_data.py  12_extra_data_types.py  13_cookie_parameters.py  14_header_parameters.py  15_cookie_parameter_models.py  17_response_model_return_type.py  18_extra_models.py  19_response_status_code.py  20_form_data.py  21_form_models.py  22_request_files.py
script/jump_to_fastapi/chapter2/: view_db.py
